2010-10-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/devel/driver.cfg: Add support for the new piplib-gmp,
	used by default by pluto's solver.

	* generators/scripts/vloog: Update the exit value.

2010-09-10  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/Makefile.am,
	* driver/pocc/driver-candl.c,
	* driver/src/Makefile.am,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg: Insert two new modules, dlml and
	parametrictiling. Not invoked by the driver.

2010-08-31  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c: Add option clastannotation_pass. Set to 1
	to enable CLAST annotation/translation (eg, parallel clast_for to
	clast_parfor).

2010-08-31  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/Makefile.am: Fix a typo in library name.

2010-08-31  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/Makefile.am: Add the new clastannotation module to
	the list of dependent libraries for PoCC.

	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg: Configure the clastannotation module by
	default for these 2 modes.

2010-08-31  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-pluto.c: add internal option
	'names_are_strings', to specify to pluto that attributes of
	ScopLib are standard (ie, strdup-able) strings and not void*
	pointers.

2010-08-10  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch adds the option --pluto-rar-cf, which allows using RAR
	dependences only for the bounding function in Pluto.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-pluto.c,
	* driver/src/options.h,