@@ -43,6 +43,7 @@ struct s_pocc_options
   char*		input_file_name;
   FILE*		output_file;
   char*		output_file_name;
+  char*		output_scoplib_file_name;
   // Set to 1 if scop fields (eg, iterator and parameter names) are
   // standard char* strings, set to 0 if it is pointers from random AST
   // node.
